--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
             <nav class="menu__body">
                <ul class="menu__list">
-                  <li><a href="./works.html" class="menu__link">Works</a></li>
-                  <li><a href="./blog.html" class="menu__link">Blog</a></li>
+                  <li><a href="./works" class="menu__link">Works</a></li>
+                  <li><a href="./blog" class="menu__link">Blog</a></li>
                   <li><a href="#footer" class="menu__link">Contact</a></li>
                </ul>
             </nav>
